--- a/aapCredsManagementPlaybook2.yml
+++ b/aapCredsManagementPlaybook2.yml
@@ -177,11 +177,9 @@
   tasks:
     - name: Display AWX export/import report
       debug:
-        var: report_output
-      run_once: true
-      vars:
-        report_output: |
+        msg: |
           === Final Report ===
           Exported Credentials: {% if export_report | length > 0 %}{{ export_report }}{% else %}None{% endif %}
           Imported Credentials: {% if import_report.imported | length > 0 %}{{ import_report.imported }}{% else %}None{% endif %}
           Skipped on import: {% if import_report.skipped | length > 0 %}{{ import_report.skipped }}{% else %}None{% endif %}
+      run_once: true
