--- a/aapCredsManagementPlaybook.yml
+++ b/aapCredsManagementPlaybook.yml
@@ -7,13 +7,46 @@
     - community.general
   vars:
     export_file: "/tmp/exported_creds.json"
-    awx_export_command: >
-      awx-manage shell_plus --quiet --command 'import json; from awx.main.models import Credential, CredentialType, Organization, Project, JobTemplate, Team, Role, User; from awx.main.utils.encryption import decrypt_value; SECRET_FIELDS=["password","ssh_key_data","ssh_key_unlock","become_password","vault_password","authorize_password","secret","secret_key","security_token"]; decrypt_inputs=lambda inputs: {} if inputs is None else {k:(decrypt_value(v, None) if (k in SECRET_FIELDS and isinstance(v, str) and v.startswith("$encrypted$") and v is not None) else v) for k,v in inputs.items()}; output={"credentials":[{"id":c.id, "name":c.name, "credential_type":c.credential_type.name, "inputs":decrypt_inputs(c.inputs)} for c in Credential.objects.all()], "credential_types":[{"id":ct.id, "name":ct.name} for ct in CredentialType.objects.all()], "organizations":[{"id":org.id, "name":org.name} for org in Organization.objects.all()], "projects":[{"id":p.id, "name":p.name} for p in Project.objects.all()], "job_templates":[{"id":jt.id, "name":jt.name} for jt in JobTemplate.objects.all()], "teams":[{"id":t.id, "name":t.name} for t in Team.objects.all()], "roles":[{"id":r.id, "name":r.name} for r in Role.objects.all()], "users":[{"id":u.id, "username":u.username} for u in User.objects.all()]}; print(json.dumps(output))'
+    awx_export_command: |
+      awx-manage shell_plus --quiet --command '
+      import json
+      from awx.main.models import Credential, CredentialType, Organization, Project, JobTemplate, Team, Role, User
+      from awx.main.utils.encryption import decrypt_value
+      from django.utils.functional import Promise
+
+      SECRET_FIELDS = ["password", "ssh_key_data", "ssh_key_unlock", "become_password", "vault_password", "authorize_password", "secret", "secret_key", "security_token"]
+      CRED_TYPES_WITH_SECRETS = ["aws", "azure", "gce", "vmware", "satellite6", "cloudforms", "insights"]
+
+      def stringify_lazy(obj):
+          """Recursively convert lazy translation objects to strings."""
+          if isinstance(obj, Promise):
+              return str(obj)
+          elif isinstance(obj, dict):
+              return {k: stringify_lazy(v) for k, v in obj.items()}
+          elif isinstance(obj, list):
+              return [stringify_lazy(elem) for elem in obj]
+          else:
+              return obj
+
+      decrypt_inputs = lambda inputs, cred_type: {} if inputs is None else {k:(decrypt_value(v, None) if (cred_type in CRED_TYPES_WITH_SECRETS and v is not None and k in SECRET_FIELDS and isinstance(v, str) and v.startswith("$encrypted$")) else v) for k,v in inputs.items()}
+
+      output = {
+          "credentials": [{"id": c.id, "name": c.name, "credential_type": c.credential_type.kind, "inputs": decrypt_inputs(c.inputs, c.credential_type.kind)} for c in Credential.objects.all()],
+          "credential_types": [{"id": ct.id, "name": ct.name, "kind": ct.kind} for ct in CredentialType.objects.all()],
+          "organizations": [{"id": org.id, "name": org.name} for org in Organization.objects.all()],
+          "projects": [{"id": p.id, "name": p.name} for p in Project.objects.all()],
+          "job_templates": [{"id": jt.id, "name": jt.name} for jt in JobTemplate.objects.all()],
+          "teams": [{"id": t.id, "name": t.name} for t in Team.objects.all()],
+          "roles": [{"id": r.id, "name": r.name} for r in Role.objects.all()],
+          "users": [{"id": u.id, "username": u.username} for u in User.objects.all()]
+      }
+      print(json.dumps(stringify_lazy(output)))
+      '
   tasks:
     - name: Retrieve AWX objects using awx-manage shell_plus
       shell: "{{ awx_export_command }}"
       register: awx_output
-      changed_when: false
+      # changed_when: false  <--- Removed.  Handlers NEED a changed task.
 
     - name: Fail if AWX export retrieval failed
       fail:
@@ -60,7 +93,7 @@
       connection: local
       become: false
       ansible.builtin.set_fact:
-        export_report: "{{ {'exported': (awx_export_json | from_json)['credentials'] | map(attribute='name') | list, 'skipped': []} }}"
+        export_report: "{{ {'exported': (awx_output.stdout | from_json)['credentials'] | map(attribute='name') | list, 'skipped': []} }}"  # Back to dictionary structure
       run_once: true
 
     - name: Trigger import handler after export tasks complete
@@ -73,7 +106,7 @@
       ansible.builtin.add_host:
         name: report
         export_report: "{{ export_report }}"
-        import_report: "{{ import_report | default({}) }}"
+        import_report: "{{ import_report | default({}) }}"  # Keep the default for now, in case of import errors
       run_once: true
 
   handlers:
@@ -96,16 +129,20 @@
         - name: Import AWX objects using awx-manage shell_plus on destination host
           delegate_to: "{{ destination_host }}"
           become: yes
-          shell: >
-            awx-manage shell_plus --quiet --command "import json; from awx.main.models import Credential, CredentialType, Organization, Project, JobTemplate, Team, Role, User; 
+          shell: |
+            awx-manage shell_plus --quiet --command "import json; from awx.main.models import Credential, CredentialType, Organization, Project, JobTemplate, Team, Role, User;
             with open('/tmp/new_export.json') as f:
               data = json.load(f);
             imported = []; skipped = [];
             for cred in data.get('credentials', []):
               if not Credential.objects.filter(name=cred['name']).exists():
-                ct = CredentialType.objects.get(name=cred['credential_type']);
-                Credential.objects.create(name=cred['name'], credential_type=ct, inputs=cred['inputs']);
-                imported.append(cred['name']);
+                try:
+                  ct = CredentialType.objects.get(kind=cred['credential_type']);
+                  Credential.objects.create(name=cred['name'], credential_type=ct, inputs=cred['inputs']);
+                  imported.append(cred['name']);
+                except CredentialType.DoesNotExist:
+                  print(f\"CredentialType kind '{cred['credential_type']}' not found for credential '{cred['name']}'. Skipping.\")
+                  skipped.append(cred['name'])
               else:
                 skipped.append(cred['name']);
             print(json.dumps({'imported': imported, 'skipped': skipped}))"
@@ -116,7 +153,7 @@
           connection: local
           become: false
           ansible.builtin.set_fact:
-            import_report: "{{ import_command_result.stdout | from_json }}"
+            import_report: "{{ import_command_result.stdout | from_json | default({}) }}"  # Keep the default here
           run_once: true
 
         - name: Clean up temporary export file on destination host
@@ -146,11 +183,6 @@
         msg: |
           === Final Report ===
           Exported Credentials: {{ export_report.exported | default([]) }}
-          Imported Credentials: {{ import_report.imported | default("None") }}
-          {% if (export_report.skipped | default([])) | length > 0 %}
-          Skipped on export: {{ export_report.skipped | default([]) }}
-          {% endif %}
-          {% if (import_report.skipped | default([])) | length > 0 %}
-          Skipped on import: {{ import_report.skipped | default([]) }}
-          {% endif %}
+          Imported Credentials: {{ import_report.get('imported', []) | default([]) }}
+          Skipped on import: {{ import_report.get('skipped', []) | default([]) }}
       run_once: true
